swagger docs added on some users handler group
