# cmd/api/feed.go
@@ -7,6 +7,25 @@ import (
 	"github.com/sawmeraw/gogo/internal/store"
 )
 
+// GetUserFeed godoc
+//
+//	@Summary		Fetch user feed
+//	@Description	Fetches the user feed by userID and params
+//	@Tags			feed
+//	@Accept			json
+//	@Product		json
+//	@Param			since	query		string	false	"Since"
+//	@Param			until	query		string	false	"Until"
+//	@Param			limit	query		int		false	"Limit"
+//	@Param			offset	query		int		false	"Offset"
+//	@Param			search	query		string	false	"Search"
+//	@Param			sort	query		string	false	"Sort"
+//	@Param			tags	query		string	false	"Tags"
+//	@Success		200		{object}	[]store.PostWithMetadata
+//	@Failure		400		{object}	error
+//	@Failure		500		{object}	error
+//	@Security		ApiKeyAuth
+//	@Router			/users/feed [get]
 func (app *application) getUserFeedHandler(w http.ResponseWriter, r *http.Request) {
 	ctx := r.Context()
 
