# cmd/api/health.go
@@ -4,6 +4,17 @@ import (
 	"net/http"
 )
 
+// AppHealth godoc
+//
+//	@Summary		Health check
+//	@Description	Responds with health details about the server
+//	@Tags			health
+//	@Accept			json
+//	@Product		json
+//	@Success		200	{string}	string	"Server is up"
+//	@Failure		500	{object}	error	"Internal Server Error"
+//	@Security		ApiKeyAuth
+//	@Router			/health [get]
 func (app *application) healthCheckHandler(w http.ResponseWriter, r *http.Request) {
 	data := map[string]string{
 		"status":  "ok",
